# timefusion

./: .dockerignore  .env.example  .env.minio  .env.test  .gitignore  CHANGELOG_MULTI_TABLE.md  CONFIG_POSTGRES.md  CONTRIBUTING.md  Cargo.toml  DELTA_CONFIG.md  Dockerfile  JSON_AND_DATE_FUNCTIONS_SUMMARY.md  LICENSE  Makefile  OPTIMIZATION_IMPROVEMENTS.md  README.md  RUNBOOK.md  build.rs  connection_pressure.sh  database.rs  docker-compose.yml  rustfmt.toml  test_update_minimal.rs
.cargo/: config.toml
.github/workflows/: autoformat.yml  ci.yml  claude-code-review.yml  deploy.yml
bench/: bench-env.sh  concurrent_load.py  debug_server.sh  delta_audit.py  dlq_drain_monitor.sh  insert_tail.sh  latency_probe.py  monoscope_e2e.py  query_latency.py  query_under_ingest.py  replay_prod_load.py  run-tf-bench.sh  run-tf-r2.sh  run_insert_bench.sh  run_select_bench.sh  run_update_bench.sh  tf-memory-bench.py  timeseries_lifecycle.py  update_churn.py  variant_bench.py
benches/: benchmarks.rs  core_benchmarks.rs  dedup_benchmarks.rs  insert_bench.rs  query_optimization_bench.rs  sort_layout_benchmarks.rs  tantivy_benchmarks.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  CACHING.md  CONFIG_POSTGRES.md  DELTA_CHECKPOINT_HANDLING.md  MULTI_TABLE_ARCHITECTURE.md  TRACING.md  VARIANT_TYPE_SYSTEM.md  WAL.md  buffered-write-layer.md  clock_audit.md  code-conciseness-research.md  e2e_plan.md  membuffer_flush_fix_plan.md
docs/plans/: 2026-06-12-membuffer-delta-visibility.md  2026-06-15-codebase-consolidation.md  2026-06-17-parquet-ordering-pushdown.md  2026-06-17-parquet-sorting-columns-inconsistency.md  2026-06-22-write-throughput.md  2026-06-23-write-throughput-and-backlog.md  2026-06-24-flush-throughput.md  2026-06-24-overnight-throughput-report.md  2026-06-29-tf-ts-correctness-parity.md  2026-06-30-tantivy-index-consistency.md  2026-06-30-tf-query-speed-vs-timescale.md  2026-07-04-dedup-oom-fix.md  2026-07-05-tantivy-query-acceleration.md  2026-07-08-wal-durability-fixes.md  2026-07-09-maintenance-free-compaction.md  2026-07-09-postcommit-hook-flush-failures.md  2026-07-16-dashboard-query-performance.md  2026-07-19-merge-batching-coalescer-collapse.md  zero-replay-shutdown-steps-5-6.md  zero-replay-shutdown.md
examples/: multi_table_demo.sh  optimized_config.sh
my_bucket/project_id=test/timestamp=2025-04-11%2016%3A04%3A19.186152/: part-00001-2d3667a5-9934-4e4c-a31d-2c21962a6cef-c000.snappy.parquet
proto/: timefusion.proto
schemas/: events.yaml  metrics.yaml  otel_logs_and_spans.yaml  otel_metrics.yaml  variant_bench.yaml
scripts/tf_vs_ts/: FINDINGS.md  counts_matrix.sh  lib.sh  row_diff.js
src/: arrow_access.rs  autotune.rs  batch_queue.rs  bootstrap.rs  buffered_write_layer.rs  clock.rs  config.rs  count_pushdown.rs  database.rs  dedup_exec.rs  delta.rs  dirty_bin_queue.rs  dml.rs  dml_coalescer.rs  dml_executor.rs  dml_query_planner.rs  error.rs  error_ext.rs  errors.rs  fields.rs  functions.rs  grpc_handlers.rs  ingest.rs  insert_coerce.rs  lib.rs  main.rs  mem_buffer.rs  metrics.rs  metrics_middleware.rs  obj_store.rs  object_store_cache.rs  object_store_cache_in_memory.rs  optimizers.rs  persistent_queue.rs  pg_catalog_integration.rs  pgserver_message.rs  pgwire_early_bind.rs  pgwire_handlers.rs  pgwire_integration.rs  physical_optimizers.rs  (+18 more)
src/dashboard/: dashboard.html
src/optimizers/: defer_expensive_projection.rs  mod.rs  ordered_union_for_topk.rs  pg_array_literal_rewriter.rs  tantivy_rewriter.rs  variant_insert_rewriter.rs  variant_select_rewriter.rs  wildcard_fn_arg_expander.rs
src/tantivy_index/: builder.rs  manifest.rs  mem_index.rs  mod.rs  reader.rs  schema.rs  search.rs  service.rs  store.rs  udf.rs
src/tests/: insert_tests.rs  logic.test  sqllogictest.rs
tests/: aggregations.slt  available_json_functions.slt  basic_operations.slt  buffer_consistency_test.rs  cache_performance_test.rs  connection_pressure_test.rs  custom_functions.slt  debug_test.slt  dedup_compaction_test.rs  dedup_read_side_test.rs  delta_checkpoint_cache_test.rs  delta_rs_api_test.rs  edge_cases.slt  end_to_end.slt  error_handling.slt  example.slt  filtering.slt  function_availability_test.slt  grpc_ingest_test.rs  insert_tests.rs  integration.slt  integration_test.rs  json_and_extract_functions_test.slt  jsonb_oid_test.rs  listen_backlog_test.rs  logic.test  membuffer_concurrency_bench.rs  merge_date_prune_test.rs  multi_project.slt  optimizer_test.rs  partition_pruning_test.slt  percentile_functions.slt  pgwire_dml_tag_test.rs  plan_cache_shape_repro.rs  postgres_json_functions.slt  proptest_invariants.rs  query  query.c  simple_test.slt  sqllogictest.rs  (+12 more)
tests/e2e/: bulk_load.rs  cache_warmth.rs  deletion_vectors.rs  dml_compression.rs  eviction.rs  flush_lifecycle.rs  flush_warm.rs  harness.rs  hash_enrichment.rs  insert_unnest_variant.rs  main.rs  multi_tenant_isolation.rs  or_utf8view_delta.rs  ordering_pushdown.rs  partition_pruning.rs  postcommit_hooks.rs  pressure_flush.rs  recent_window_pruning.rs  restart_recovery.rs  smoke.rs  staged_commit.rs  zorder_idempotence.rs
tests/slt/: aggregations.slt  basic_operations.slt  custom_functions.slt  distinct_on_variant.slt  edge_cases.slt  filtering.slt  function_availability_test.slt  integration.slt  json_functions.slt  partition_pruning_test.slt  percentile_functions.slt  variant_column.slt  variant_functions.README.md  variant_functions.slt  variant_functions.slt.disabled
