[package]
name = "timefusion"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
datafusion = "53.1.0"
datafusion-datasource = "53.1.0"
arrow = "58"
arrow-ipc = "58"
arrow-json = "58"
uuid = { version = "1.17", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_arrow = { version = "0.14", features = ["arrow-58"] }
serde_json = "1.0.141"
serde_with = "3.14"
serde_yaml = "0.9"
async-trait = "0.1.86"
log = "0.4.27"
color-eyre = "0.6.5"
arrow-schema = "58"
regex = "1.11.1"
# delta-rs PR #4325 — variant type support, with timefusion-specific fixes
# (defaults schema_force_view_types to false so variant scans yield Binary, not BinaryView)
deltalake = { git = "https://github.com/tonyalaribe/delta-rs-timefusion.git", branch = "timefusion-fixes", features = [
  "datafusion",
  "s3",
] }
buoyant_kernel = { version = "0.22", features = [
  "arrow-conversion",
  "default-engine-rustls",
  "arrow-58",
] }
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
] }
futures = { version = "0.3.31", features = ["alloc"] }
bytes = "1.4"
tokio-rustls = "0.26.1"
datafusion-postgres = "0.16"
datafusion-functions-json = "0.53"
anyhow = "1.0.100"
tokio-util = "0.7.17"
tokio-stream = { version = "0.1.17", features = ["net"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
datafusion-tracing = { git = "https://github.com/datafusion-contrib/datafusion-tracing.git", rev = "8c28322f" }
instrumented-object-store = { git = "https://github.com/datafusion-contrib/datafusion-tracing.git", rev = "8c28322f" }
dotenv = "0.15.0"
include_dir = "0.7"
aws-config = { version = "1.6.0", features = ["behavior-version-latest"] }
aws-types = "1.3.6"
aws-sdk-s3 = "1.3.0"
aws-sdk-dynamodb = "1.3.0"
url = "2.5.4"
tokio-cron-scheduler = "0.15"
object_store = "0.13.2"
foyer = { version = "0.22.3", features = ["serde"] }
ahash = "0.8"
lru = "0.16.1"
serde_bytes = "0.11.19"
dashmap = "6.1"
parking_lot = "0.12"
envy = "0.4"
tdigests = "1.0"
bincode = { version = "2.0", features = ["serde"] }
walrus-rust = "0.2.0"
thiserror = "2.0"
strum = { version = "0.27", features = ["derive"] }
datafusion-variant = { git = "https://github.com/datafusion-contrib/datafusion-variant.git", branch = "main" }
parquet-variant-compute = "58.3"
parquet-variant-json = "58.3"
parquet-variant = "58.3"
serde_json_path = "0.7"
base64 = "0.22"
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
sqllogictest = { git = "https://github.com/risinglightdb/sqllogictest-rs.git" }
serial_test = "3.2.0"
datafusion-common = "53.1.0"
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
scopeguard = "1.2.0"
rand = "0.10.0"
tempfile = "3"
test-case = "3.3"
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
tower = { version = "0.5", features = ["util"] }
hyper-util = { version = "0.1", features = ["tokio"] }

[[bench]]
name = "core_benchmarks"
harness = false

[features]
default = []
test = []
