[package]
name = "timefusion"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
datafusion = "53.1.0"
datafusion-datasource = "53.1.0"
arrow = "58"
arrow-ipc = "58"
arrow-json = "58"
uuid = { version = "1.17", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_arrow = { version = "0.14", features = ["arrow-58"] }
serde_json = "1.0.141"
serde_with = "3.14"
serde_yaml = "0.9"
async-trait = "0.1.86"
log = "0.4.27"
color-eyre = "0.6.5"
arrow-schema = "58"
regex = "1.11.1"
# delta-rs main + local Variant DML fix. Branch `timefusion-variant-dml` on
# our fork carries the write_data_plan normalization for issue #40
# ("Expected Struct(Binary), got Struct(BinaryView)" on DELETE/UPDATE).
# Rebase the branch onto upstream main when picking up newer revs.
# Pinned to a SHA, not the branch tip, so `cargo update` can't silently pull
# breaking changes from the fork. Bump explicitly when rebasing on upstream.
deltalake = { git = "https://github.com/tonyalaribe/delta-rs-timefusion.git", rev = "005b9ebf6262cd192501c29be3bb9df62acfa2f7", features = [
  "datafusion",
  "s3",
] }
buoyant_kernel = { version = "0.22", features = [
  "arrow-conversion",
  "default-engine-rustls",
  "arrow-58",
] }
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
] }
futures = { version = "0.3.31", features = ["alloc"] }
bytes = "1.4"
tokio-rustls = "0.26.1"
datafusion-postgres = "0.16"
datafusion-functions-json = "0.53"
anyhow = "1.0.100"
subtle = "2"
sha2 = "0.10"
fastrand = "2"
fnv = "1"
tokio-util = "0.7.17"
tokio-stream = { version = "0.1.17", features = ["net"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics"] }
datafusion-tracing = { git = "https://github.com/datafusion-contrib/datafusion-tracing.git", rev = "8c28322f" }
instrumented-object-store = { git = "https://github.com/datafusion-contrib/datafusion-tracing.git", rev = "8c28322f" }
dotenv = "0.15.0"
include_dir = "0.7"
aws-config = { version = "1.6.0", features = ["behavior-version-latest"] }
aws-types = "1.3.6"
aws-sdk-s3 = "1.3.0"
url = "2.5.4"
tokio-cron-scheduler = "0.15"
object_store = "0.13.2"
foyer = { version = "0.22.3", features = ["serde"] }
ahash = "0.8"
lru = "0.16.1"
serde_bytes = "0.11.19"
dashmap = "6.1"
parking_lot = "0.12"
envy = "0.4"
tdigests = "1.0"
bincode = { version = "2.0", features = ["serde"] }
walrus-rust = { path = "vendor/walrus-rust" }
thiserror = "2.0"
strum = { version = "0.27", features = ["derive"] }
derive_more = { version = "2", features = ["debug", "display"] }
datafusion-variant = { git = "https://github.com/datafusion-contrib/datafusion-variant.git", branch = "main" }
parquet-variant-compute = "58.3"
parquet-variant-json = "58.3"
parquet-variant = "58.3"
serde_json_path = "0.7"
base64 = "0.22"
aes-gcm = "0.10"
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tantivy = "0.22"
tar = "0.4"
zstd = "0.13"
tempfile = "3"
sysinfo = { version = "0.32", default-features = false, features = ["system", "disk"] }
num_cpus = "1.16"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
sqllogictest = { git = "https://github.com/risinglightdb/sqllogictest-rs.git" }
serial_test = "3.2.0"
tokio = { version = "1.48", features = ["test-util"] }
datafusion-common = "53.1.0"
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
scopeguard = "1.2.0"
rand = "0.10.0"
tempfile = "3"
test-case = "3.3"
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
tower = { version = "0.5", features = ["util"] }
hyper-util = { version = "0.1", features = ["tokio"] }
# E2E harness: dynamic MinIO per test, snapshot assertions, proptest.
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["minio"] }
tokio-test = "0.4"
tracing-test = "0.2"
insta = { version = "1", features = ["yaml"] }
proptest = "1"

[[test]]
name = "e2e"
path = "tests/e2e/main.rs"

[[bench]]
name = "core_benchmarks"
harness = false

[[bench]]
name = "tantivy_benchmarks"
harness = false

[[bench]]
name = "sort_layout_benchmarks"
harness = false

[features]
default = []
test = []

# Release builds prioritize binary size + runtime speed over compile time.
# fat LTO + single codegen-unit lets the optimizer inline across crates;
# `strip = "symbols"` drops debug symbols. Roughly halves the published
# image size, mostly by shrinking the embedded binary. CI compile time
# goes up — acceptable for ghcr.io tags.
[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

# Fast-iteration release profile: ~3x faster builds vs `release` (thin-LTO,
# parallel codegen, no debuginfo, no strip). Marginal runtime cost. Use for
# perf-iteration cycles, not for shipping binaries.
#   cargo build --profile release-iter
[profile.release-iter]
inherits = "release"
lto = "thin"
codegen-units = 16
debug = 0
strip = "none"

# Local patch: arrow-pg 0.13.0's UUID parameter decoder calls
# `portal.parameter::<String>`, which pgwire rejects for the UUID OID and
# breaks any client (Hasql, tokio-postgres binary) sending UUIDs. Vendored
# copy decodes as `uuid::Uuid` then stringifies into the Utf8 column.
[patch.crates-io]
arrow-pg = { path = "vendor/arrow-pg" }
# Local patch: datafusion-postgres 0.16.0's `ordered_param_types` sorts
# placeholders lexicographically (`$10` before `$2`), so multi-row INSERTs
# with >9 placeholders return the wrong type-by-position to the client.
# Vendored copy sorts by numeric suffix instead.
datafusion-postgres = { path = "vendor/datafusion-postgres" }

