[package]
name = "timefusion"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
datafusion = "54.0.0"
datafusion-datasource = "54.0.0"
arrow = "58"
arrow-ipc = "58"
arrow-json = "58"
uuid = { version = "1.17", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_arrow = { version = "0.14", features = ["arrow-58"] }
serde_json = "1.0.141"
serde_with = "3.14"
serde_yaml = "0.9"
async-trait = "0.1.86"
log = "0.4.27"
color-eyre = "0.6.5"
arrow-schema = "58"
regex = "1.11.1"
# delta-rs main + local Variant DML fixes + parquet sort-order pushdown. Fork
# `timefusion-variant-dml` (rebased onto upstream DataFusion 54). Pinned to a
# rev, not the branch tip: a moving branch changes Cargo.lock on every fork
# push, which busts cargo-chef's recipe.json and forces a full dependency
# recompile in CI. Bump deliberately to pick up fork changes:
#   cargo update -p deltalake --precise <new-sha>   (then update this rev)
deltalake = { git = "https://github.com/tonyalaribe/delta-rs-timefusion.git", rev = "f2d2c5bc46057d60fbb9c5489878a7b3871618a0", features = [
  "datafusion",
  "s3",
] }
buoyant_kernel = { version = "0.22", features = [
  "arrow-conversion",
  "default-engine-rustls",
  "arrow-58",
] }
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
] }
futures = { version = "0.3.31", features = ["alloc"] }
bytes = "1.4"
tokio-rustls = "0.26.1"
datafusion-postgres = "0.17"
datafusion-functions-json = "0.54"
anyhow = "1.0.100"
subtle = "2"
sha2 = "0.10"
fastrand = "2"
fnv = "1"
fs4 = "0.13"
tokio-util = "0.7.17"
tokio-stream = { version = "0.1.17", features = ["net"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics", "logs"] }
opentelemetry-appender-tracing = "0.31"
datafusion-tracing = "54.0.0"
instrumented-object-store = "54.0.0"
dotenv = "0.15.0"
include_dir = "0.7"
aws-config = { version = "1.6.0", features = ["behavior-version-latest"] }
aws-types = "1.3.6"
aws-sdk-s3 = "1.3.0"
url = "2.5.4"
# Cron parsing only. We drive the wall-clock loop ourselves (see
# spawn_cron_job) rather than tokio-cron-scheduler, which silently stopped
# dispatching ticks in prod (2026-07-13: 0 maintenance runs over 14h uptime).
croner = "3"
object_store = "0.13.2"
foyer = { version = "0.22.3", features = ["serde"] }
ahash = "0.8"
lru = "0.16.1"
serde_bytes = "0.11.19"
dashmap = "6.1"
parking_lot = "0.12"
envy = "0.4"
tdigests = "1.0"
bincode = { version = "2.0", features = ["serde"] }
walrus-rust = { path = "vendor/walrus-rust" }
thiserror = "2.0"
strum = { version = "0.27", features = ["derive"] }
derive_more = { version = "2", features = ["debug", "display"] }
# Official datafusion-contrib/datafusion-variant — supports DataFusion 54 / arrow
# 58.3 as of #62. We carry no local changes, so use upstream directly (pinned).
datafusion-variant = { git = "https://github.com/datafusion-contrib/datafusion-variant.git", rev = "9e1c84698150eaef7b640f50f907dd8e585174f5" }
parquet-variant-compute = "58.3"
parquet-variant-json = "58.3"
parquet-variant = "58.3"
# PG-compatible SQL/JSON path engine (RisingWave). Parser is effectively
# identical to Postgres's jsonpath parser — accepts/rejects the same grammar —
# so jsonb_path_exists matches Timescale by construction. Replaces serde_json_path
# (RFC 9535), which cannot parse the PG dialect (`? (@ ..)`, like_regex, etc.).
sql-json-path = "0.1"
base64 = "0.22"
aes-gcm = "0.10"
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tantivy = "0.22"
tar = "0.4"
zstd = "0.13"
tempfile = "3"
sysinfo = { version = "0.32", default-features = false, features = ["system", "disk"] }
num_cpus = "1.16"
scopeguard = "1.2.0"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
sqllogictest = { git = "https://github.com/risinglightdb/sqllogictest-rs.git" }
serial_test = "3.2.0"
tokio = { version = "1.48", features = ["test-util"] }
datafusion-common = "54.0.0"
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4", "with-serde_json-1"] }
rand = "0.10.0"
tempfile = "3"
test-case = "3.3"
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
tower = { version = "0.5", features = ["util"] }
hyper-util = { version = "0.1", features = ["tokio"] }
# E2E harness: dynamic MinIO per test, snapshot assertions, proptest.
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["minio"] }
tokio-test = "0.4"
tracing-test = "0.2"
insta = { version = "1", features = ["yaml"] }
proptest = "1"

[[bench]]
name = "core_benchmarks"
harness = false

[[bench]]
name = "tantivy_benchmarks"
harness = false

[[bench]]
name = "sort_layout_benchmarks"
harness = false

[[bench]]
name = "dedup_benchmarks"
harness = false

[features]
default = []
test = []
# Gates the dynamic-MinIO E2E suite. Off by default so the heavy
# testcontainers path doesn't run in the main `cargo test` job — the
# dedicated `e2e` CI job opts in via `--features e2e`.
e2e = []
# Production heap (jemalloc prof) + CPU (pprof) profiling, deployed to attribute
# the prod OOM (2026-07-04). Off by default: the deps are Linux-only and add
# allocator/sampler overhead. The Docker image opts in (see Dockerfile) and
# builds with symbols (CARGO_PROFILE_RELEASE_STRIP=none) so jeprof/pprof can
# resolve stacks. Artifacts land in <data_dir>/timefusion/profiles + the
# jemalloc prof_prefix (see src/main.rs malloc_conf).
profiling = ["dep:tikv-jemallocator", "dep:pprof"]

# Profiling deps are Linux-only (jemalloc prof needs it; and prod is Linux) so a
# macOS `--features profiling` check doesn't try to build jemalloc with prof.
[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["profiling", "unprefixed_malloc_on_supported_platforms"], optional = true }
pprof = { version = "0.14", features = ["flamegraph"], optional = true }

[[test]]
name = "e2e"
path = "tests/e2e/main.rs"
required-features = ["e2e"]

# Release builds balance runtime speed against deploy turnaround. The final
# per-deploy cost is the whole-program LTO link of the timefusion crate (deps
# are cached by cargo-chef); `lto = "fat"` + `codegen-units = 1` makes that
# link single-threaded and is the dominant deploy bottleneck. `lto = "thin"` +
# parallel codegen recovers most cross-crate inlining at ~3x faster link for
# marginal runtime cost — the right tradeoff for a DB bottlenecked on IO/memory,
# not inlined CPU. `strip = "symbols"` keeps the published image small.
# Dev iteration: `line-tables-only` keeps backtraces resolvable but drops the
# bulk of debuginfo, cutting codegen + link time on this large crate.
[profile.dev]
debug = "line-tables-only"

[profile.release]
lto = "thin"
codegen-units = 16
strip = "symbols"

# Profiling/iteration variant of `release`: identical optimization, but keeps
# symbols (strip = "none") so profilers/backtraces resolve frames. Use for
# perf-iteration cycles, not for shipping binaries.
#   cargo build --profile release-iter
[profile.release-iter]
inherits = "release"
debug = 0
strip = "none"

[patch.crates-io]
# datafusion-postgres ecosystem on our fork's DataFusion 54 branch
# (apitoolkit/datafusion-postgres @ timefusion-df54, off v0.16.0). Carries two
# fixes: arrow-pg decodes UUID/JSON/JSONB bind params by raw bytes (pgwire's
# FromSql<String> rejects those OIDs, breaking any client sending a UUID), and
# `ordered_param_types` sorts placeholders by numeric suffix (lexicographic put
# `$10` before `$2`, mistyping params in >9-placeholder statements). Patching
# datafusion-postgres alone pulls its sibling arrow-pg/datafusion-pg-catalog
# from the same git workspace, so those need no separate patch.
datafusion-postgres = { git = "https://github.com/apitoolkit/datafusion-postgres.git", branch = "timefusion-df54" }
# datafusion-sql on our fork (tonyalaribe/datafusion @ timefusion-update-from-54,
# off tag 54.0.0): removes the SQL planner's defensive
# `not_impl_err!("UPDATE ... FROM is not supported")` guard so `UPDATE ... FROM`
# reaches TF's DmlQueryPlanner (Delta MergeBuilder / MemBuffer hash-join).
# Mirrors apache/datafusion#21530; drop once upstream merges #19950.
datafusion-sql = { git = "https://github.com/tonyalaribe/datafusion.git", branch = "timefusion-update-from-54" }
